[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Actors/Characters/OurSnek/OurSnek.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actors/Characters/OurSnek/OurSnek.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "New Anim",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 7.5 )

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 3 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 60, 15 )

[node name="OurSnek" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "New Anim"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 7 )

[node name="EdgeChecker" type="RayCast2D" parent="."]
position = Vector2( 8, 4 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="ChasingArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea"]
position = Vector2( 0, -4 )
shape = SubResource( 8 )
[connection signal="body_entered" from="ChasingArea" to="." method="startChasing"]
[connection signal="body_exited" from="ChasingArea" to="." method="stopChasing"]
